Error: Initial Commit of manifest.json

--- a/HelloWorldv2/webapp/i18n/i18n.properties
+++ b/HelloWorldv2/webapp/i18n/i18n.properties
@@ -1,2 +1,7 @@
+#App Descriptor
+appTitle = Hello World from i18n
+appDescription = Description coming from i18n file
+
+#Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello "static" {0}
