Working: Pages & Panel

--- a/HelloWorldv2/webapp/i18n/i18n.properties
+++ b/HelloWorldv2/webapp/i18n/i18n.properties
@@ -5,3 +5,5 @@ appDescription = Description coming from i18n file
 #Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello "static" {0}
+homePageTitle=i18n Walkthrough
+helloPanelTitle=i18n Hellow World
