Working: Dialog and Fragments

--- a/HelloWorldv2/webapp/i18n/i18n.properties
+++ b/HelloWorldv2/webapp/i18n/i18n.properties
@@ -7,3 +7,5 @@ showHelloButtonText=Say Hello
 helloMsg=Hello "static" {0}
 homePageTitle=i18n Walkthrough
 helloPanelTitle=i18n Hellow World
+openDialogButtonText=Say Hello with Dialog
+dialogCloseButtonText=Ok
