--- a/HelloWorldv2/webapp/i18n/i18n.properties
+++ b/HelloWorldv2/webapp/i18n/i18n.properties
@@ -9,3 +9,4 @@ homePageTitle=i18n Walkthrough
 helloPanelTitle=i18n Hellow World
 openDialogButtonText=Say Hello with Dialog
 dialogCloseButtonText=Ok
+rightButtonText=Go Right :-)
